<?xml version="1.0"?>
<package format="2">
  <name>inland_ir_cam</name>
  <version>0.1.0</version>
  <description>Package to access the Inland IR Camera from ROS.</description>
  <maintainer email="adamico@ieee.org">Andrew Damico</maintainer>


  <license>#TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>compressed_image_transport</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>camera_info_manager</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>diagnostic_updater</depend>
  <depend>libraspberrypi0</depend>
  <build_depend>libraspberrypi-dev</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
